--- a/.htaccess
+++ b/.htaccess
@@ -3,3 +3,5 @@ RewriteRule ^monkeymart$ fun/monkeymart.html [NC,L]
 RewriteRule ^ctr$ fun/ctr.html [NC,L]
 RewriteRule ^ctr-tr$ fun/ctr-tr.html [NC,L]
 RewriteRule ^ctr-holiday$ fun/ctr-holiday.html [NC,L]
+RewriteRule ^subway-surfers$ fun/subway-surfers.html [NC,L]
+RewriteRule ^cookie-clicker$ fun/cookie-clicker.html [NC,L]
