--- a/.htaccess
+++ b/.htaccess
@@ -5,3 +5,4 @@ RewriteRule ^ctr-tr$ fun/ctr-tr.html [NC,L]
 RewriteRule ^ctr-holiday$ fun/ctr-holiday.html [NC,L]
 RewriteRule ^subway-surfers$ fun/subway-surfers.html [NC,L]
 RewriteRule ^cookie-clicker$ fun/cookie-clicker.html [NC,L]
+RewriteRule ^99balls$ fun/99balls.html [NC,L]
