--- a/.htaccess
+++ b/.htaccess
@@ -6,3 +6,4 @@ RewriteRule ^ctr-holiday$ fun/ctr-holiday.html [NC,L]
 RewriteRule ^subway-surfers$ fun/subway-surfers.html [NC,L]
 RewriteRule ^cookie-clicker$ fun/cookie-clicker.html [NC,L]
 RewriteRule ^99balls$ fun/99balls.html [NC,L]
+RewriteRule ^1v1lol$ fun/1v1lol.html [NC,L]
