--- a/.htaccess
+++ b/.htaccess
@@ -7,3 +7,4 @@ RewriteRule ^subway-surfers$ fun/subway-surfers.html [NC,L]
 RewriteRule ^cookie-clicker$ fun/cookie-clicker.html [NC,L]
 RewriteRule ^99balls$ fun/99balls.html [NC,L]
 RewriteRule ^1v1lol$ fun/1v1lol.html [NC,L]
+RewriteRule ^baldisbasics$ fun/baldisbasics.html [NC,L]
